# Lygretus_Programavimas

Lab1/: CMakeLists.txt  main.cpp  tmp_rez.txt
Lab1a/: IFF-8-8_ZumarasLukas_L1_dat_2.json  IFF-8-8_ZumarasLukas_L1_rez.txt  main.cpp
Lab1b/: CMakeLists.txt  IFF-8-8_ZumarasLukas_L1_dat_1.json  IFF-8-8_ZumarasLukas_L1_rez.txt  main.cpp
Lab2/: IFF-8-8_ZumarasLukas_L1_rez.txt  main.cpp
TestPVZ/: main.cpp
TestPVZ_2/: CMakeLists.txt  main.cpp
lab3_cuda/: CMakeLists.txt  IFF-8-8_ZumarasLukas_L1_dat_1.txt  IFF-8-8_ZumarasLukas_L1_dat_2.txt  IFF-8-8_ZumarasLukas_L1_dat_3.txt  IFF-8-8_ZumarasLukas_L1_rez.txt  main.cu  struct_based_main.cu
